live2dのSDKをReactに組み込み対応

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
   <title>TypeScript HTML App</title>
 </head>
 <body>
+  <!-- Live2DCubismCore script -->
+  <script src = "./Core/live2dcubismcore.min.js"></script>
   <div id="root"></div>
 </body>
 </html>
